stadium renderitation fixed and improved wall collision

--- a/src/main/resources/assets/beycraft/lang/es_es.lang
+++ b/src/main/resources/assets/beycraft/lang/es_es.lang
@@ -1,3 +1,39 @@
-item.AchillesA4.name=Z Achilles
+item.achillesa4.name=Z Achilles
 item.11disk.name=Disco 11
-item.XtendDriver.name=Xtend Driver
+item.XtendDriver.name=Xtend driver
+item.wizard_fafnir.name=Wizard Fafnir
+item.ratchet.name=Disco Ratchet
+item.rise_driver.name=Rise Driver
+item.valtryekv4.name=ValtryekV4
+item.12disk.name=Disco 12
+item.volcanic_driver.name=Volcanic Driver
+item.valtryekv2.name=ValtryekV2
+item.boostdisk.name=Disco Boost
+item.variable_driver.name=Variable Driver
+item.valtryekv5.name=ValtryekV5
+item.zenithdisk.name=Disco Zenith
+item.evolution_driver.name=Evolution Driver
+item.spryzen_requiem.name=Spryzen Requiem
+item.0disk.name=Disco 0
+item.turbospryzen.name=TurboSpryzen
+item.0wdisk.name=Disco 0W
+item.zetas_driver.name=Zetas Driver
+item.salamanders4.name=SalamanderS4
+item.operate_driver.name=Operate Driver
+item.valtryekv3.name=ValtryekV3
+item.red_launcher.name=Lanzador Rojo
+item.left_launcher.name=Lanzador izquierdo
+item.launcherhandle.name=Mango lanzador
+item.beylogger.name=Bey Logger
+item.beylogger_plus.name=Bey Logger Plus
+itemGroup.BeyCraft=BeyCraft Misc
+itemGroup.BeyDisks=BeyCraft Discos
+itemGroup.BeyDrivers=BeyCraft Drivers
+itemGroup.BeyLayers=BeyCraft Layers
+item.package.name=Paquete Beyblade
+item.blitzdisk.name=Disco Blitz
+item.sword_valtryek.name=Sword Valtryek
+item.cosmic_k.name=Cosmic kraken
+item.viper_hydrax.name=Viper HydraxH5
+item.viper.name=Disco Python
+item.viper_driver.name=jaggy Driver
