Multiple tabs added and en_us.lang/es_es.lang updated

--- a/src/main/resources/assets/beycraft/lang/es_es.lang
+++ b/src/main/resources/assets/beycraft/lang/es_es.lang
@@ -18,7 +18,7 @@ item.0disk.name=Disco 0
 item.turbospryzen.name=TurboSpryzen
 item.0wdisk.name=Disco 0W
 item.zetas_driver.name=Zetas Driver
-item.salamanders4.name=SalamanderS4
+item.SalamanderS4.name=Salamander S4
 item.operate_driver.name=Operate Driver
 item.valtryekv3.name=ValtryekV3
 item.red_launcher.name=Lanzador Rojo
