Stadium finished and launch direction fixed

--- a/src/main/resources/assets/beycraft/lang/es_es.lang
+++ b/src/main/resources/assets/beycraft/lang/es_es.lang
@@ -1,4 +1,4 @@
-item.achillesa4.name=Z Achilles
+item.AchillesA4.name=Z Achilles
 item.11disk.name=Disco 11
 item.XtendDriver.name=Xtend driver
 item.wizard_fafnir.name=Wizard Fafnir
