--- a/src/main/resources/assets/beycraft/lang/en_us.lang
+++ b/src/main/resources/assets/beycraft/lang/en_us.lang
@@ -1,4 +1,4 @@
-item.achillesa4.name=Z Achilles
+item.AchillesA4.name=Z Achilles
 item.11disk.name=11 disk
 item.XtendDriver.name=Xtend driver
 item.wizard_fafnir.name=Wizard Fafnir
