Fixed Bey collisions and capability sync

--- a/src/main/resources/assets/beycraft/lang/es_es.lang
+++ b/src/main/resources/assets/beycraft/lang/es_es.lang
@@ -4,25 +4,25 @@ item.XtendDriver.name=Xtend driver
 item.wizard_fafnir.name=Wizard Fafnir
 item.ratchet.name=Disco Ratchet
 item.rise_driver.name=Rise Driver
-item.valtryekv4.name=ValtryekV4
+item.ValtryekV4.name=ValtryekV4
 item.12disk.name=Disco 12
 item.volcanic_driver.name=Volcanic Driver
-item.valtryekv2.name=ValtryekV2
+item.ValtryekV2.name=ValtryekV2
 item.boostdisk.name=Disco Boost
 item.variable_driver.name=Variable Driver
-item.valtryekv5.name=ValtryekV5
+item.ValtryekV5.name=ValtryekV5
 item.zenithdisk.name=Disco Zenith
 item.evolution_driver.name=Evolution Driver
-item.spryzen_requiem.name=Spryzen Requiem
+item.requiem_srpyzen.name=Spryzen Requiem
 item.0disk.name=Disco 0
-item.turbospryzen.name=TurboSpryzen
+item.TurboSpryzen.name=Turbo Spryzen
 item.0wdisk.name=Disco 0W
 item.zetas_driver.name=Zetas Driver
 item.SalamanderS4.name=Salamander S4
 item.operate_driver.name=Operate Driver
-item.valtryekv3.name=ValtryekV3
-item.red_launcher.name=Lanzador Rojo
-item.left_launcher.name=Lanzador izquierdo
+item.ValtryekV3.name=ValtryekV3
+item.Red_Launcher.name=Lanzador Rojo
+item.Left_Launcher.name=Lanzador izquierdo
 item.launcherhandle.name=Mango lanzador
 item.beylogger.name=Bey Logger
 item.beylogger_plus.name=Bey Logger Plus
