--- a/src/main/resources/assets/beycraft/lang/en_us.lang
+++ b/src/main/resources/assets/beycraft/lang/en_us.lang
@@ -4,29 +4,29 @@ item.XtendDriver.name=Xtend driver
 item.wizard_fafnir.name=Wizard Fafnir
 item.ratchet.name=Ratchet Disk
 item.rise_driver.name=Rise Driver
-item.valtryekv4.name=ValtryekV4
+item.ValtryekV4.name=ValtryekV4
 item.12disk.name=Disk 12
 item.volcanic_driver.name=Volcanic Driver
-item.valtryekv2.name=ValtryekV2
+item.ValtryekV2.name=ValtryekV2
 item.boostdisk.name=Boost Disk
 item.variable_driver.name=Variable Driver
-item.valtryekv5.name=ValtryekV5
+item.ValtryekV5.name=ValtryekV5
 item.zenithdisk.name=Zenith Disk
 item.evolution_driver.name=Evolution Driver
-item.spryzen_requiem.name=Spryzen Requiem
+item.requiem_spryzen.name=Spryzen Requiem
 item.0disk.name=0 Disk
-item.turbospryzen.name=TurboSpryzen
+item.TurboSpryzen.name=Turbo Spryzen
 item.0wdisk.name=0W Disk
 item.zetas_driver.name=Zetas Driver
 item.SalamanderS4.name=Salamander S4
 item.operate_driver.name=Operate Driver
-item.valtryekv3.name=ValtryekV3
-item.red_launcher.name=Red Launcher
-item.left_launcher.name=Left-Launcher
+item.ValtryekV3.name=ValtryekV3
+item.Red_Launcher.name=Red Launcher
+item.Left_Launcher.name=Left-Launcher
 item.launcherhandle.name=Launcher Handle
 item.beylogger.name=Bey Logger
 item.beylogger_plus.name=Bey Logger Plus
-itemGroup.BeyCraft=BeyCraft Main
+itemGroup.BeyCraft=BeyCraft Misc
 itemGroup.BeyDisks=BeyCraft Disks
 itemGroup.BeyDrivers=BeyCraft Drivers
 itemGroup.BeyLayers=BeyCraft Layers
