--- a/src/main/resources/assets/beycraft/lang/en_us.json
+++ b/src/main/resources/assets/beycraft/lang/en_us.json
@@ -8,5 +8,6 @@
   "item.beycraft.launcher_handle": "Handle",
   "item.beycraft.plastic": "Plastic",
   "item.beycraft.rubber": "Rubber",
-  "item.beycraft.stadium": "Stadium"
+  "item.beycraft.stadium": "Stadium",
+  "item.beycraft.package": "Package"
 }
