--- a/src/main/resources/assets/beycraft/lang/en_us.json
+++ b/src/main/resources/assets/beycraft/lang/en_us.json
@@ -2,6 +2,8 @@
   "itemGroup.Layers": "Layers",
   "itemGroup.Disks": "Discs",
   "itemGroup.Drivers": "Drivers",
+  "itemGroup.Beycraft": "Beycraft",
+  "item.beycraft.package": "Beyblade pack",
   "item.beycraft.launcher": "Launcher",
   "item.beycraft.left_launcher": "Left Launcher",
   "item.beycraft.dual_launcher": "Dual Launcher",
@@ -10,10 +12,27 @@
   "item.beycraft.launcher_handle": "Handle",
   "item.beycraft.plastic": "Plastic",
   "item.beycraft.rubber": "Rubber",
-  "item.beycraft.stadium": "Stadium",
-  "item.beycraft.package": "Package",
+  "item.beycraft.belt": "Blader belt",
+  "item.beycraft.baruto_boots": "Baruto boots",
+  "item.beycraft.baruto_pants": "Baruto pants",
+  "item.beycraft.baruto_chest": "Baruto chest",
+  "item.beycraft.baruto_jacket": "Baruto jacket",
+  "item.beycraft.baruto_gloves": "Baruto gloves",
+  "item.beycraft.baruto_boots_cho_z": "Baruto boots Cho-Z",
+  "item.beycraft.baruto_pants_cho_z": "Baruto pants Cho-Z",
+  "item.beycraft.baruto_chest_cho_z": "Baruto chest Cho-Z",
+  "item.beycraft.baruto_jacket_cho_z": "Baruto jacket Cho-Z",
+  "item.beycraft.baruto_gloves_cho_z": "Baruto gloves Cho-Z",
+  "item.beycraft.beycoin": "Beycoin",
+  "block.beycraft.expository": "Expository",
+  "block.beycraft.beycreator": "Beycreator",
+  "block.beycraft.robot": "Training robot",
+  "block.beycraft.battle_informer": "Battle informer",
+  "block.beycraft.stadium": "Stadium",
   "beycoins.command.message": "You have %s BeyCoins",
-  "beybox.successful.command.message": "You bought a random bey box",
+  "beycoins.fail.command.message": "You don't have enough BeyCoins",
+  "beycoins.successful.command.message": "You claimed %s BeyCoins",
+  "beybox.successful.command.message": "You bought a random beyblade pack",
   "beybox.fail.command.message": "You don't have enough money to buy a random bey box",
-  "missing_packs.message": "You forgot to install Content Packs, without it you won't have beyblade parts\nso you can have a beyblade or do battles, only decorate,\nto get content packs go to official discord:\nhttps://beycraft.ga/"
+  "no_internet.message": "This mod requires access to internet to work, connect to it to play"
 }
