--- a/src/main/resources/assets/beycraft/lang/es_es.json
+++ b/src/main/resources/assets/beycraft/lang/es_es.json
@@ -2,6 +2,8 @@
   "itemGroup.Layers": "Layers",
   "itemGroup.Disks": "Discos",
   "itemGroup.Drivers": "Drivers",
+  "itemGroup.Beycraft": "Beycraft",
+  "item.beycraft.package": "Paquete",
   "item.beycraft.launcher": "Lanzador",
   "item.beycraft.left_launcher": "Lanzador de izquierda",
   "item.beycraft.dual_launcher": "Lanzador dual",
@@ -10,9 +12,27 @@
   "item.beycraft.launcher_handle": "Mango",
   "item.beycraft.plastic": "Plastico",
   "item.beycraft.rubber": "Goma",
-  "item.beycraft.stadium": "Estadio",
-  "item.beycraft.package": "Paquete",
+  "item.beycraft.belt": "Cinturón de blader",
+  "item.beycraft.baruto_boots": "Botas de Baruto",
+  "item.beycraft.baruto_pants": "Pantalones de Baruto",
+  "item.beycraft.baruto_chest": "Camiseta de Baruto",
+  "item.beycraft.baruto_jacket": "Chaqueta de Baruto",
+  "item.beycraft.baruto_gloves": "Guantes de Baruto",
+  "item.beycraft.baruto_boots_cho_z": "Botas de Baruto Cho-Z",
+  "item.beycraft.baruto_pants_cho_z": "Pantalones de Baruto Cho-Z",
+  "item.beycraft.baruto_chest_cho_z": "Camiseta de Baruto Cho-Z",
+  "item.beycraft.baruto_jacket_cho_z": "Chaqueta de Baruto Cho-Z",
+  "item.beycraft.baruto_gloves_cho_z": "Guantes de Baruto Cho-Z",
+  "item.beycraft.beycoin": "Beycoin",
+  "block.beycraft.expository": "Expositor",
+  "block.beycraft.beycreator": "Creador de beyblades",
+  "block.beycraft.robot": "Robot de entrenamiento",
+  "block.beycraft.battle_informer": "Informador de batallas",
+  "block.beycraft.stadium": "Estadio",
   "beycoins.command.message": "Tienes %s BeyCoins",
+  "beycoins.fail.command.message": "No tienes suficientes BeyCoins",
+  "beycoins.successful.command.message": "Has reclamado %s BeyCoins",
   "beybox.successful.command.message": "Compraste una caja aleatoria bey",
-  "beybox.fail.command.message": "No tienes dinero para comprar una caja aleatoria bey"
+  "beybox.fail.command.message": "No tienes dinero para comprar una caja aleatoria bey",
+  "no_internet.message": "Este mod necesita acceso a internet para funcionar, conectate para jugar"
 }
