readded launches system on a different way and other things that I forgot

--- a/src/main/resources/assets/beycraft/lang/en_us.json
+++ b/src/main/resources/assets/beycraft/lang/en_us.json
@@ -4,7 +4,7 @@
   "itemGroup.drivers": "Drivers",
   "itemGroup.beycraft": "Beycraft",
   "item.beycraft.package": "Beyblade pack",
-  "item.beycraft.launcher": "Launcher",
+  "item.beycraft.right_launcher": "Launcher",
   "item.beycraft.left_launcher": "Left Launcher",
   "item.beycraft.dual_launcher": "Dual Launcher",
   "item.beycraft.beylogger": "Beylogger",
